--- a/meetups/templates/meetups/meetup-details.html
+++ b/meetups/templates/meetups/meetup-details.html
@@ -1,36 +1,35 @@
+{% extends 'meetups/base/base.html' %}
+
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{% static 'meetups/styles/base.css' %}" />
-    <link rel="stylesheet" href="{% static 'meetups/styles/meetup-details.css' %}" />
-    <title>{{ meetup.title }}</title>
-  </head>
-  <body>
-    <main>
-        <article>
-            <img src="{{ meetup.image }}" alt="{{ meetup.title }}" />
-            <section id="location">
-                <h2>Meetup Location</h2>
-                <address>This meetup takes place in <span>{{ meetup.location }}</span></address>
-            </section>
 
-            <section id="details">
-                <h2>What's This Meetup About?</h2>
-                <p>{{ meetup.description }}</p>
-                <footer>
-                    <p>Need more details? Please <a href="">contact the organizer.</a></p>
-                </footer>
-            </section>
+{% block title %}
+{{ meetup.title }}
+{% endblock %}
 
-            <section id="registration">
-                <h2>Join us!</h2>
-                FORM
-            </section>
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'meetups/styles/meetup-details.css' %}" />
+{% endblock %}
 
-        </article>
+{% block body %}
+    <article>
+        <img src="{{ meetup.image }}" alt="{{ meetup.title }}" />
+        <section id="location">
+            <h2>Meetup Location</h2>
+            <address>This meetup takes place in <span>{{ meetup.location }}</span></address>
+        </section>
 
-</html>
+        <section id="details">
+            <h2>What's This Meetup About?</h2>
+            <p>{{ meetup.description }}</p>
+            <footer>
+                <p>Need more details? Please <a href="">contact the organizer.</a></p>
+            </footer>
+        </section>
+
+        <section id="registration">
+            <h2>Join us!</h2>
+            FORM
+        </section>
+
+    </article>
+{% endblock %}
