--- a/meetups/templates/meetups/meetup-details.html
+++ b/meetups/templates/meetups/meetup-details.html
@@ -6,6 +6,10 @@
 {{ meetup.title }}
 {% endblock %}
 
+{% block main_heading %}
+{{ meetup.title }}
+{% endblock %}
+
 {% block stylesheet %}
 <link rel="stylesheet" href="{% static 'meetups/styles/meetup-details.css' %}" />
 {% endblock %}
