changed include parameters

--- a/meetups/templates/meetups/meetup-item.html
+++ b/meetups/templates/meetups/meetup-item.html
@@ -5,8 +5,8 @@
           <img src="" alt="" />
         </div>
         <div class="meetup-details">
-          <h3>{{ meetup.title }}</h3>
-          <address>{{ meetup.location }}</address>
+          <h3>{{ title }}</h3>
+          <address>{{ location }}</address>
         </div>
       </div>
       <div class="meetup-actions">
