--- a/meetups/templates/meetups/meetup-details.html
+++ b/meetups/templates/meetups/meetup-details.html
@@ -15,25 +15,30 @@
 {% endblock %}
 
 {% block body %}
-    <article>
-        <img src="{{ meetup.image }}" alt="{{ meetup.title }}" />
-        <section id="location">
-            <h2>Meetup Location</h2>
-            <address>This meetup takes place in <span>{{ meetup.location }}</span></address>
-        </section>
 
-        <section id="details">
-            <h2>What's This Meetup About?</h2>
-            <p>{{ meetup.description }}</p>
-            <footer>
-                <p>Need more details? Please <a href="">contact the organizer.</a></p>
-            </footer>
-        </section>
+    {% if meetup_found %}
+        <article>
+            <img src="{{ meetup.image.url }}" alt="{{ meetup.title }}" />
+            <section id="location">
+                <h2>Meetup Location</h2>
+                <address>This meetup takes place in <span>{{ meetup.location }}</span></address>
+            </section>
 
-        <section id="registration">
-            <h2>Join us!</h2>
-            FORM
-        </section>
+            <section id="details">
+                <h2>What's This Meetup About?</h2>
+                <p>{{ meetup.description }}</p>
+                <footer>
+                    <p>Need more details? Please <a href="">contact the organizer.</a></p>
+                </footer>
+            </section>
 
-    </article>
+            <section id="registration">
+                <h2>Join us!</h2>
+                FORM
+            </section>
+
+        </article>
+    {% else %}
+        <p>Sorry, but this meetup was not found...</p>
+    {% endif %}
 {% endblock %}
