--- a/meetups/templates/meetups/meetup-item.html
+++ b/meetups/templates/meetups/meetup-item.html
@@ -2,7 +2,7 @@
     <article>
       <div class="meetup-summary">
         <div class="meetup-image">
-          <img src="" alt="" />
+          <img src="{{ image.url }}" alt="{{ title }}" />
         </div>
         <div class="meetup-details">
           <h3>{{ title }}</h3>
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="meetup-actions">
-        <a class="btn" href="{% url 'meetup-details' meetup.slug %}"
+        <a class="btn" href="{% url 'meetup-details' slug %}"
           >Show details</a
         >
       </div>
