--- a/meetups/static/meetups/styles/base.css
+++ b/meetups/static/meetups/styles/base.css
@@ -24,16 +24,19 @@ button,
   font: inherit;
   padding: 0.5rem 1.5rem;
   background-color: #388e3c; /* Slightly lighter green for buttons for contrast */
-  border: 1px solid #388e3c; /* Matching border color */
+  border: 2.4px solid #388e3c; /* Matching border color */
   color: #ffffff; /* White text on buttons for readability */
   border-radius: 4px;
   text-decoration: none;
+  transition: 0.5s;
 }
 
 button:hover,
 .btn:hover {
   background-color: #4caf50; /* Even lighter green on hover for a noticeable effect */
-  border-color: #4caf50;
+  /* border-color: #4caf50; */
+  border: 2.4px solid #ffff !important;
+  transition: 0.5s;
 }
 
 #main-header {
